2004-06-30  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: upd
	* src/cd-drive.[ch]:
	* src/bacon-cd-selection.[ch]: update from nautilus-cd-burner
	* src/bacon-v4l-selection.[ch]: use the GtkComboBox in place of 
	GtkOptionMenu

2004-06-28  Bastien Nocera  <hadess@hadess.net>

	* .cvsignore: upd

2004-06-28  Bastien Nocera  <hadess@hadess.net>

	* README: upd TODO
	* src/totem.c: (totem_time_within_seconds),
	(totem_action_previous): implement Iain's CD player like idea
	(only go to the previous track if we're at the beginning of the track,
	 otherwise seek back to the start)

2004-06-27  Julien MOUTTE  <julien@moutte.net>

	* configure.in: Fix build.

2004-06-22  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd

2004-06-22  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_class_init),
	(bacon_video_widget_signal_idler):
	* src/bacon-video-widget-xine.c: (bacon_video_widget_class_init),
	(frame_output_cb), (bacon_video_widget_realize),
	(bacon_video_widget_idle_signal):
	* src/bacon-video-widget.h:
	* src/baconvideowidget-marshal.list:
	* src/totem.c: (on_error_event), (video_widget_create):

	Add a "fatal" argument to the error signal, generate an async error
	signal when a video output driver isn't available on _realize,
	now we have a nice error message when a video driver isn't there
	(Closes: #143879)

2004-06-21  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_init):
	* src/bacon-video-widget-xine.c: (bacon_video_widget_init):
	* src/totem-remote.c: (totem_remote_class_init),
	(totem_remote_init):
	* src/totem-statusbar.c: use G_DEFINE_TYPE (more)

2004-06-14  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_set_playing): remove some
	duplicate code

2004-06-14  Bastien Nocera  <hadess@hadess.net>

	* src/video-utils.c: (totem_display_is_local): only consider display
	to be non-local if there is a hostname part of the display name