@@ -1,6 +1,11 @@
 2004-06-30  Bastien Nocera  <hadess@hadess.net>
 
 	* src/Makefile.am: upd
+	* src/list_v4l.c: (list_v4l), (main): moved from libbacon
+
+2004-06-30  Bastien Nocera  <hadess@hadess.net>
+
+	* src/Makefile.am: upd
 	* src/cd-drive.[ch]:
 	* src/bacon-cd-selection.[ch]: update from nautilus-cd-burner
 	* src/bacon-v4l-selection.[ch]: use the GtkComboBox in place of 
